# aoc-rust-2022

./: .gitignore  3  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: lib.rs
src/util/: graph.rs  tree.rs
